# hops

./: .gitignore  .swiftlint.yml  AGENT2_IMPLEMENTATION.md  AGENT4_ERROR_MESSAGES_SUMMARY.md  AGENTS.md  AUTO_START_VERIFICATION.md  INTERACTIVE_TTY_FIX.md  Makefile  NAT_NETWORK_FIX.md  PROGRESS.md  Package.resolved  Package.swift  README.md  STDIN_FIX_SUMMARY.md  STDIN_IMPLEMENTATION_STATUS.md  build-and-sign.sh  create-rootfs.swift  debug-test.sh  generate-proto.sh  install.sh  test-interactive-immediate.sh  test-interactive-prompt.sh  test-interactive.sh  test-output-timing.sh  test-prompt-simple.sh  test-prompt-timing.sh  test-prompt.sh  test-shell-prompt.sh
.github/workflows/: release.yml
Formula/: hops.rb
Sources/HopsCore/: Capability.swift  ColoredOutput.swift  DaemonManager.swift  ErrorMessages.swift  Mount.swift  OCIImageManager.swift  PathUtils.swift  Policy.swift  PolicyParser.swift  PolicyValidator.swift  ProfileManager.swift
Sources/HopsProto/: hops.grpc.swift  hops.pb.swift
config/: README.md  default.toml
docs/: QUICKSTART.md  README.md  TEST_COVERAGE_REPORT.md  setup.md  testing.md
hops-gui/: Cargo.toml  build.rs
hops-gui/docs/: GRPC_INTEGRATION.md  MODEL_SYNC_STATUS.md  README.md
hops-gui/src/: app.rs  grpc_client.rs  main.rs
hops-gui/src/models/: capability.rs  mod.rs  policy.rs
hops-gui/src/utils/: config.rs
hops-gui/src/views/: mod.rs  profile_editor.rs  profile_list.rs  run_history.rs
launchd/: README.md  com.hops.daemon.plist  com.hops.daemon.user.plist  install-user.sh  install.sh
proto/: hops.proto
(+48 files in other folders)
